--- a/socionics/templates/socionics/index.html
+++ b/socionics/templates/socionics/index.html
@@ -1,62 +1,85 @@
+{% load socionics_extras %}
 <html>
     <head>
-        <h3>Model A</h3>
-        <table>
-            <thead>
-                {% for dicho in model_a_list %}
-                    <th>{% dicho[0] %}</th>
-                    <th>{% dicho[1] %}</th>
-                {% endfor %}
-            </thead>
-            <tbody>
-                {% for e in elements %}
-                    <tr>{% e %}</tr>
-                    {% for dicho in model_a_list %}
-                        <tr>
-                            <input class="form-check-input" type="radio" value=0 name={% dicho[0] %}>
-                        </tr>
-                        <tr>
-                            <input class="form-check-input" type="radio" value=0 name={% dicho[1] %}>
-                        </tr>
-                        <th>{% dicho[0] %}</th>
-                        <th>{% dicho[1] %}</th>
-                    {% endfor %}
-                {% endfor %}
-            </tbody>
-        </table>
-
-        <h3>Reinin Dichotomies</h3>
-        <table>
-            <thead>
-
-            </thead>
-            <tbody>
-                {% for dicho in reinin_list %}
-                    <tr>{% dicho[0] %}</tr>
-                    <tr>
-                        <input class="form-check-input" type="radio" value=0 name={% dicho[0] %}>
-                    </tr>
-                    <tr>
-                        <input class="form-check-input" type="radio" value=0 name={% dicho[1] %}>
-                    </tr>
-                    <tr>{% dicho[1] %}</tr>
-                {% endfor %}
-            </tbody>
-        </table>
-
-        <h3>Score</h3>
-        <table>
-            <thead>
-
-            </thead>
-            <tbody>
-                {% for s in get_score() %}
-                    <tr>{% s[0] %}</tr> <tr>{% s[1] %}</tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <style>
+            .form-check-input.model-a {display: block; margin: auto;}
+        </style>
     </head>
     <body>
-
+        <container>
+            <h3>Model A</h3>
+            <table class="table-sm">
+                <thead>
+                    <tr>
+                        <th>IE</th>
+                        {% for dicho in model_a_list %}
+                        <th scope="col">{{ dicho.0 }}</th>
+                        <th scope="col">{{ dicho.1 }}</th>
+                        {% endfor %}
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for e in elements %}
+                        <tr>
+                            <th scope="row">{{ e }}</td>
+                            {% for dicho in model_a_list %}
+                            <td>
+                                <div class="form-check">
+                                    <input class="form-check-input model-a" type="radio" value=0 name={{ dicho.0|addstr:dicho.1|addstr:e}}>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="form-check">
+                                    <input class="form-check-input model-a" type="radio" value=0 name={{ dicho.0|addstr:dicho.1|addstr:e}}>
+                                </div>
+                            </td>
+                            {% endfor %}
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        
+            <h3>Reinin Dichotomies</h3>
+            <table class="table-sm">
+                <thead>
+                </thead>
+                <tbody>
+                    {% for dicho in reinin_list %}
+                    <tr>
+                        <td>
+                            {{ dicho.0 }}
+                        </td>
+                        <td>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" value=0 name={{ dicho.0|addstr:dicho.1 }}>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" value=0 name={{ dicho.0|addstr:dicho.1 }}>
+                            </div>
+                        </td>
+                        <td>
+                            {{ dicho.1 }}
+                        </td>
+                    </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+                
+                <h3>Score</h3>
+                <table class="table-sm">
+                    <thead>
+                    </thead>
+                    <tbody>
+                        {% for s in get_scores %}
+                        <tr>
+                            <td>{{ s.0 }}</td> <td>{{ s.1 }}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+            </table>
+    </container>
     </body>
-</html>
+    </html>
